--- a/public/assets/login/css/style.css
+++ b/public/assets/login/css/style.css
@@ -2795,6 +2795,7 @@ button.tm-videobutton:hover span {
 }
 
 .tm-form-fieldhalf {
+  margin-top: 30px;
   -webkit-box-flex: 0;
   -ms-flex: 0 0 calc(50% - 15px);
   flex: 0 0 calc(50% - 15px);
