--- a/public/assets/login/css/style.css
+++ b/public/assets/login/css/style.css
@@ -1467,6 +1467,7 @@ input[type="radio"]:checked ~ label::before {
 .tm-section {
   position: relative;
   z-index: 1;
+  min-height: 500px;
 }
 
 .bg-shape-left {
