--- a/public/assets/css/entox.css
+++ b/public/assets/css/entox.css
@@ -7658,8 +7658,14 @@ ul {
 }
 
 .listing-details__right-price-text p {
-  font-size: 15px;
+  color: black;
+  font-size: 20px;
   margin: 0;
+}
+.listing-details__right-price-text h5 {
+  font-size: 18px;
+ color: var(--thm-dark-gray);
+ font-weight: 400;
 }
 
 .listing-details__contact-info-phone {
