--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,8 @@
     <meta charset='utf-8' />
     <title>App</title>
   </head>
-  <body>
-    {{message}}
+   <body>
+    <div id="google_translate_element" style="display: none;"></div>
+    <!--  -->   {{message}}
   </body>
 </html>
