--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22916,7 +22916,10 @@ width: 44px;
 }
 
 .property-grid-plan .property-grid-thumb img {
-  width: 100%;
+  width: 380px;
+  height: auto;
+  background-color: #001484;
+  
 }
 
 .property-grid-plan .property-grid-title {
