--- a/public/assets/css/entox.css
+++ b/public/assets/css/entox.css
@@ -3404,7 +3404,13 @@ ul {
   color: var(--thm-primary);
 }
 
-
+.footer-widget__contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
 
 
 
@@ -8709,12 +8715,7 @@ NAVBAR
   background-color: black;
  
 }
-/* hotelrunner CSS*/
-#hr_frame_overlay{display:none;position:fixed;width:100%;left:0;top:0;z-index:9999999999998;background-color:#000}
-#hr_frame_container{display:none;position:fixed;width:100%;left:0;top:0;z-index:9999999999999}
-@media only screen and (max-width: 767px)
-{#hr_frame_container{position:fixed}}
-#hr_frame{width:100%;height:100%}#hr_frame{width:100%;height:100vh}.browser{width:100%;height:100%}
+
 
 
 
